--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "fstream": "^1.0.12",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "^2.1.8",
-    "react-spring": "^8.0.18"
+    "react-scripts": "^3.0.1",
+    "react-spring": "^8.0.18",
+    "tar": "^4.4.8"
   },
   "scripts": {
     "start": "react-scripts start",
